K8s/manifests/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deplyoment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-pv-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
      containers:
        - name: db
          image: postgres
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: db-pv-storage

          ports:
            - containerPort: 5432
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
